@@ -50,6 +50,8 @@
 <!-- doxrox-include igraph_edge_betweenness -->
 <!-- doxrox-include igraph_pagerank -->
 <!-- doxrox-include igraph_pagerank_old -->
+<!-- doxrox-include igraph_personalized_pagerank -->
+<!-- doxrox-include igraph_personalized_pagerank_vs -->
 <!-- doxrox-include igraph_constraint -->
 <!-- doxrox-include igraph_maxdegree -->
 <!-- doxrox-include igraph_strength -->
